# Barney12-cmake-build-systems

./: CMakeLists.txt
utilities/: CMakeLists.txt
utilities/src/: CMakeLists.txt  CmdlineUtilWin.cpp
utilities/test/: CMakeLists.txt  CmdlineUtil_test.cpp
